feat: rename azure ad to entra id
This also introduces an alias for the old `azuread` value in
serialized form so that we don't break behaviour for existing consumers.
